Development
    Fix support for older xulrunners, Issue #160, issue caused by patch from
    Issue #158
    Support nsapi-sdk, based on patch from Issue #159
    Fix up some const casting so that compilers do not complain Issue #158
    Updated Japanese translation
    Updated Italian translation
1.0.5b1
    When uri is a file:// uri, just play it directly
    Switch from AM_MAINTAINER_MODE to AM_MAINTAINER_MODE([enable]) in configure.in
    Fix Issue #150, return value for function that says it will
    Updated Dutch translation
    Conversion to using libgmtk as separate library
    Improvements to the apple.com/trailers fix, caching now works properly
    Fix regression at apple.com/trailers, side effect of fully caching the file for now
1.0.4
	Fix problem where file is downloaded before gnome-mplayer is started (locally cached)
	Added Portuguese translation
	Remove some whitespace
	Updated French translation
	Updated Polish translation
	Updated Turkish translation
1.0.4b2
	If http is found in the URL it may not be a stream (this might break some sites)
	Get status messages looking better, requires gnome-mplayer from SVN on same date
	Disable Windows OnDSPlayStateChangeEvt callback
	Emulate WMP status
	Emulate WMP versionInfo
	Add in some more WMP javascript emulation
	Align PlayStateChanges similar to WMP
	Rework how media events are handled
	Fix problems with SetVolume
	Remove a couple of state change callbacks to stop fork bomb
	Call javascript function OnDSPlayStateChange if it is exists
	Add .media.getItemInfo title,url, bitrate to WMP Javascript emulation
	Add .URL to WMP Javascript emulation
	Updated Polish translation
	Add .media.duration to WMP Javascript emulation
	Add .settings.volume to WMP Javascript emulation
1.0.4b1
	When getting a file from Apple, only play the first media link
	Add udp as supported streaming format
	Fix up some issues with apple trailers
1.0.3
	Allow files > 2GB to be loaded in NP_FULL mode